--- a/src/Aguacongas.RedisQueue/Aguacongas.RedisQueue.csproj
+++ b/src/Aguacongas.RedisQueue/Aguacongas.RedisQueue.csproj
@@ -19,12 +19,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Aguacongas.RedisQueue.Core\Aguacongas.RedisQueue.Core.csproj" />
+    <ProjectReference Include="..\..\scr\Aguacongas.RedisQueue.Web\Aguacongas.RedisQueue.Web.csproj" />
   </ItemGroup>
 
 </Project>
