--- a/test/Aguacongas.RedisQueue.Core.IntegrationTest/Aguacongas.RedisQueue.Core.IntegrationTest.csproj
+++ b/test/Aguacongas.RedisQueue.Core.IntegrationTest/Aguacongas.RedisQueue.Core.IntegrationTest.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.msbuild" Version="2.5.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
