--- a/template/Aguacongas.RedisQueue/Aguacongas.RedisQueue.csproj
+++ b/template/Aguacongas.RedisQueue/Aguacongas.RedisQueue.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Authors>Aguacongas.RedisQueue</Authors>
+    <Description></Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
