--- a/src/Aguacongas.RedisQueue.Web/Aguacongas.RedisQueue.Web.csproj
+++ b/src/Aguacongas.RedisQueue.Web/Aguacongas.RedisQueue.Web.csproj
@@ -4,7 +4,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>Aguacongas.RedisQueue</RootNamespace>
     <Authors>Olivier Lefebvre</Authors>
-    <Description>Core library to manage queues hosted by redis</Description>
+    <Description>ASP.Net Core MCV API library to manage queues hosted by redis.
+
+Contain MVC API to manage queues</Description>
     <Copyright>Copyright (c) 2018 @Olivier Lefebvre</Copyright>
     <PackageLicenseUrl>https://github.com/aguacongas/Aguacongas.RedisQueue/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/aguacongas/Aguacongas.RedisQueue</PackageProjectUrl>
