--- a/nuget.config
+++ b/nuget.config
@@ -3,7 +3,7 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="artifact" value="artifacts\build" />
+    <add key="artifact" value="artifacts/build" />
   </packageSources>
   <packageRestore>
     <add key="enabled" value="True" />
