--- a/template/Aguacongas.RedisQueue.nuspec
+++ b/template/Aguacongas.RedisQueue.nuspec
@@ -13,6 +13,6 @@
   </metadata>
   <files>
     <file src=".template.config\*.*" target="content\.template.config" />
-    <file src="Aguacongas.RedisQueue\**\*.*" exclude="Api\**\bin\**\*.*" target="content\Aguacongas.RedisQueue" />
+    <file src="Aguacongas.RedisQueue.Template\**\*.*" exclude="Api\**\bin\**\*.*" target="content" />
   </files>
 </package>
