refactor(template): debuging

--- a/src/Aguacongas.RedisQueue.Web/Aguacongas.RedisQueue.Web.csproj
+++ b/src/Aguacongas.RedisQueue.Web/Aguacongas.RedisQueue.Web.csproj
@@ -34,4 +34,10 @@ Contain MVC API to manage queues</Description>
     <ProjectReference Include="..\Aguacongas.RedisQueue.Core\Aguacongas.RedisQueue.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Aguacongas.RedisQueue.Web.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
