--- a/template/Aguacongas.RedisQueue.Template/Aguacongas.RedisQueue.Template.csproj
+++ b/template/Aguacongas.RedisQueue.Template/Aguacongas.RedisQueue.Template.csproj
@@ -9,14 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!--<PackageReference Include="Aguacongas.RedisQueue.Web" Version="1.0.0-*" />-->
+    <PackageReference Include="Aguacongas.RedisQueue.Web" Version="1.0.0-*" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Aguacongas.RedisQueue.Web\Aguacongas.RedisQueue.Web.csproj" />
   </ItemGroup>
 
   <ItemGroup>
